--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".Homework5Activity"
+                  android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity
                 android:name=".Homework4Activity"
                 android:label="@string/title_activity_homework4"
