--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.pavelekozhevnikov.homework">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.pavelekozhevnikov.homework">
 
     <application
             android:allowBackup="true"
@@ -8,26 +9,30 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".Homework5Activity"
-                  android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity
-                android:name=".Homework4Activity"
-                android:label="@string/title_activity_homework4"
-                android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+            android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+        <activity
+            android:name=".Homework5Activity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
+        <activity
+            android:name=".Homework4Activity"
+            android:label="@string/title_activity_homework4"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-                android:name=".Homework3Activity"
-                android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".TextInputActivity"/>
-        <activity android:name=".MainActivity">
+            android:name=".Homework3Activity"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity android:name=".TextInputActivity"/>
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
