--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,35 +4,35 @@
     package="com.pavelekozhevnikov.homework">
 
     <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <activity android:name=".Hw7BottomNavigationActivity"></activity>
         <activity
-            android:name=".Homework5Activity"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
-        <activity
-            android:name=".Homework4Activity"
-            android:label="@string/title_activity_homework4"
+            android:name=".Hw7TabsActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".Homework5Activity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Homework4Activity"
+            android:label="@string/title_activity_homework4"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".Homework3Activity"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".TextInputActivity"/>
-        <activity android:name=".MainActivity"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".TextInputActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
